fix: there is a small gap bellow search popup

--- a/packages/webapp/src/features/search/SearchBox/index.less
+++ b/packages/webapp/src/features/search/SearchBox/index.less
@@ -17,7 +17,7 @@
   }
 
   .searchbox-backdrop {
-    top: @input-height-base;
+    top: @input-height-base - 1;
   }
 }
 
